getting the first input box right for the date

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     </head>
 
     <body>
-        <main id="container">
-
-        </main>
-
+        <form action="">
+            <fieldset>
+                <label for="jounalDate"> Date of entry</label>
+                <input type="date" name="journalDate">
+            </fieldset>
+        </form>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
