added some code from the website to build some journal entry HTML

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </fieldset>
             <button>Save Entry</button>
         </form>
+        <section id="entryLog">
+
+        </section>
         <script type="module" src="./scripts/main.js"></script>
     </body>
 </html>
