apparently I made some changes and did not commit before switching projects

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <h1>Code Still More</h1>
+        <h1 class="header">Code Still More</h1>
         <form action="">
             <fieldset>
                 <label for="journalDate">Date of entry</label>
