--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Daily Journal</title>
         <link rel="stylesheet" href="./styles/main.css">
+        <link rel="shortcut icon" href="#" type="#">
     </head>
 
     <body>
