--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body class="container">
         <h1 class="header">Code Still More</h1>
         <form class="journalEntryContainer" action=""></form>
+        <h2>Past Journal Entries</h2>
         <section id="entryLog"></section>
     </body>
     <script type="module" src="./scripts/main.js"></script>
