got the filter bar to render using the labels from the api. Formatted that filter to stack nicely by adding a div and flexing it

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1 class="header">Code Still More</h1>
         <form class="journalEntryContainer" action=""></form>
         <h2>Past Journal Entries</h2>
+        <div class="filters"></div>
         <section id="entryLog"></section>
     </body>
     <script type="module" src="./scripts/main.js"></script>
